re PR c++/17829 (wrong error: call of  overloaded function is ambiguous)

cp:
	PR c++/17829
	* parser.c (cp_parser_postfix_expression): Inhibit Koenig when
	unqualified lookup finds a member function.
testsuite:
	PR c++/17829
	* g++.dg/lookup/koenig4.C: New.

From-SVN: r88760